--- a/README.org
+++ b/README.org
@@ -1,5 +1,7 @@
 * API
+
 ** Install
+
    #+BEGIN_SRC shell
     apt-get build-dep python-mysqldb python-virtualenv
     virtualenv env
@@ -8,12 +10,21 @@
     pip install -r requirements.txt
     python recipes.py
    #+END_SRC
+
 ** Access
+
 *** List all recipes
    http://127.0.0.1:5000/api/recipes
+
 *** Get recipe's details with rec_id=4 
    http://127.0.0.1:5000/api/recipes/4 
-*** TODO reflect all database at once, ensure relationships follow
-    http://docs.sqlalchemy.org/en/rel_0_8/core/reflection.html#reflecting-all-tables-at-once
-*** TODO list recipe's steps
-*** TODO list ingredients
+
+*** list recipe's steps
+    /api/recipes/4
+    /api/steps?rec_id=4
+
+*** list ingredients
+   http://127.0.0.1:5000/api/ingredients
+
+*** list steps
+   http://127.0.0.1:5000/api/steps
