--- a/README.org
+++ b/README.org
@@ -56,17 +56,32 @@
 
 *** Init script (to run as a daemon)
 
+**** Edit daemon settings in the file 'everycook_api'
+
+     #+BEGIN_SRC shell
+      APP_DIR=/vagrant/everycook-api
+      VIRTUALENV_DIR=$APP_DIR/env
+      ACTIVATE=$VIRTUALENV_DIR/bin/activate
+      PID_FILE=$VIRTUALENV_DIR/everycook.pid
+      HOST=''
+      PORT=8000
+      START_CMD="gunicorn simple_api:app --daemon -n everycookapi -p $PID_FILE --chdir $APP_DIR -b $HOST:$PORT"
+     #+END_SRC
+
 **** Copy or link the file 'everycook_api' to your initscript folder
+     
      #+BEGIN_SRC shell
       cp everycook_api /etc/init.d/
      #+END_SRC
 
 **** Run everycook_api
+
     #+BEGIN_SRC shell
      /etc/init.d/everycook_api start
     #+END_SRC 
-
+     
 **** Stop everycook_api
+
     #+BEGIN_SRC shell
      /etc/init.d/everycook_api stop
     #+END_SRC 
@@ -74,17 +89,17 @@
 ** Access
 
 *** List all recipes
-   http://127.0.0.1:5000/api/recipes
+   http://127.0.0.1:8000/api/recipes
 
 *** Get recipe's details with rec_id=4 
-   http://127.0.0.1:5000/api/recipes/4 
+   http://127.0.0.1:8000/api/recipes/4 
 
 *** list recipe's steps
     /api/recipes/4
     /api/steps?rec_id=4
 
 *** list ingredients
-   http://127.0.0.1:5000/api/ingredients
+   http://127.0.0.1:8000/api/ingredients
 
 *** list steps
-   http://127.0.0.1:5000/api/steps
+   http://127.0.0.1:8000/api/steps
